[#7] ДобавиÑ лскрипт с генерацией ЙQR-коо в в папке с екущей датой/временем

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ typer = {extras = ["all"], version = "^0.9.0"}
 rich = "^10.7.0"
 python-dotenv = "^0.21.1"
 aiogram = "^3.1.1"
+segno = "^1.5.3"
 
 [tool.poetry.group.dev.dependencies]
 wemake-python-styleguide = "^0.17.0"
